--- a/tracing/pyproject.toml
+++ b/tracing/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "numpy>=2.4.2",
+    "opencv-python>=4.13.0.92",
     "pillow>=12.1.1",
 ]
