--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,5 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.idw filter=lfs diff=lfs merge=lfs -text
+*.webp filter=lfs diff=lfs merge=lfs -text
+*.blend* filter=lfs diff=lfs merge=lfs -text
