chore: add basic integration notebook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "tracing"
+    "jupyter>=1.1.1",
+    "tracing",
 ]
 
 [tool.uv.workspace]
