--- a/tracing/pyproject.toml
+++ b/tracing/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "numpy>=2.4.2",
     "opencv-python>=4.13.0.92",
     "pillow>=12.1.1",
+    "pyglet<2",
+    "scipy>=1.17.1",
     "tqdm>=4.67.3",
     "trimesh>=4.11.2",
 ]
