--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,17 @@ requires-python = ">=3.13"
 dependencies = [
     "jupyter>=1.1.1",
     "tracing",
+    "genai",
+    "python-dotenv>=1.2.1",
+    "dotenv>=0.9.9",
 ]
 
 [tool.uv.workspace]
-members = ["tracing"]
+members = [
+    "tracing",
+    "genai",
+]
 
 [tool.uv.sources]
 tracing = { workspace = true }
+genai = { workspace = true }
