--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "genai",
     "python-dotenv>=1.2.1",
     "dotenv>=0.9.9",
+    "flask>=3.1.3",
+    "sshtunnel>=0.4.0",
 ]
 
 [tool.uv.workspace]
