--- a/tracing/pyproject.toml
+++ b/tracing/pyproject.toml
@@ -5,11 +5,13 @@ description = "Wrapped texture and UV mapping to 3D segment coordinates pipeline
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "matplotlib>=3.10.8",
     "numpy>=2.4.2",
     "opencv-python>=4.13.0.92",
     "pillow>=12.1.1",
     "pyglet<2",
     "scipy>=1.17.1",
+    "shapely>=2.1.2",
     "tqdm>=4.67.3",
     "trimesh>=4.11.2",
 ]
