--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "dotenv>=0.9.9",
     "flask>=3.1.3",
     "sshtunnel>=0.4.0",
+    "matplotlib>=3.10.8",
+    "paramiko>=3.5.0",
+    "cryptography>=42.0.0",
 ]
 
 [tool.uv.workspace]
