ci: cix tree index root dir

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -47,7 +47,8 @@ jobs:
       - name: Generate Tree Index
         run: |
           sudo apt-get install -y tree
-          tree -H '.' \
+          tree output \
+               -H '.' \
                -T "Duckify - Project Documentation" \
                -P "*.pdf" \
                -P "*.md" \
