--- a/genai/pyproject.toml
+++ b/genai/pyproject.toml
@@ -11,6 +11,13 @@ dependencies = [
     "paramiko>=3.5.0",
     "pathlib>=1.0.1",
     "sshtunnel>=0.4.0",
+    "python-dotenv>=1.2.1",
+    "dotenv>=0.9.9",
+    "flask>=3.1.3",
+    "sshtunnel>=0.4.0",
+    "matplotlib>=3.10.8",
+    "paramiko>=3.5.0",
+    "cryptography>=42.0.0",
 ]
 
 
